Added parent dir to present path

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 Is there an older version of src/katas/input/* without all of the code
 written?
 
+Add setup of Git, Go present, and the slides to the Setup Guide.
+
 
