Ongoing work to cleanup the 'present' tool HTML
I'd like sublevels to work.  Issues filed on this say "it won't happen"
or "do it yourself".  Sigh.

I've created 'test.slide' for use in testing changes, and
'present.patch' for corrections already made and working (such as code
being shown in blue, and font styling working in titles).  The README.md
describes how to apply the (optional) patch to the 'present' tool.

--- a/TODO
+++ b/TODO
@@ -3,12 +3,16 @@ written?
 
 Add setup of Git, Go present, and the slides to the Setup Guide.
 
+Advertise as "Similar to Go Tutorial but takes things deeper."
+
 Mention the use of:
     import m "lib/math"
     ...and...
     import . "lib/math"
+
 Need new description of Slices and make():
     Suggest covering the basics of arrays first, then a little bit about
     slices.  A later section should revisit slices and demonstrate
     operations like append() and cap().
-Be more "idiomatic". :)  (Not idiotic.)
+
+Be more "idiomatic".  (Not idiotic. :))
