Added more notes to README.md
Also a small wording change in TODO (nothing significant).

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
-Is there an older version of src/katas/input/* without all of the code
-written?
+Is there an older version of src/katas/input/* without all of the lab
+exercise code already written??
 
 Add setup of Git, Go present, and the slides to the Setup Guide.
 
